--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb://localhost:27017/Portfolio
+MONGODB_URI=mongodb+srv://vetcharoopesh:roopeshvetcha@cluster0.excm3hr.mongodb.net/Portfolio
 GMAIL_USER=vetcharoopesh@gmail.com
 GMAIL_PASS=cqkx knlw gyen pwpc
