--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
 		"next-themes": "^0.2.1",
 		"nodemailer": "^6.9.15",
 		"react": "18.3.1",
-		"react-dom": "18.3.1"
+		"react-dom": "18.3.1",
+		"react-redux": "^9.1.2"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.2",
